buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:5.2.2'
    }
}

plugins {
    id "io.spring.dependency-management" version '1.0.11.RELEASE'
    id "de.undercouch.download" version '5.1.0'
    id "com.github.spotbugs" version '2.0.0' apply false
    // id 'deltix.gradle.plugins.velocity' version '1.3.0' apply false TODO: investigate
    id 'deltix.gradle.plugin.gitlab-release' version '1.0.11'
}

group 'deltix.qsrv'

// To enable JavaDoc generation add Gradle property to command line:
// -PincludeJavaDocs
def includeJavaDocs = hasProperty("includeJavaDocs")

// Spotbugs
def enableSpotbugs = hasProperty("spotbugs") || Boolean.getBoolean("spotbugs") || Boolean.parseBoolean(System.getenv('SPOTBUGS'))
if (enableSpotbugs) {
    println("Spotbugs is ENABLED")
}

ext {
    publisherUser = findProperty('ARTIFACTORY_USER') ?: System.getenv('ARTIFACTORY_USER') ?: "FakeUser"
    publisherPassword = findProperty('ARTIFACTORY_PASS') ?: System.getenv('ARTIFACTORY_PASS') ?: "FakePassword"

    vendor = 'Deltix Inc.'
    categories = 'Unit' // Default test categories

    // We don't want to apply plugins and build artifacts for non-leaf (grouping) projects.
    // So we create a list of leaf projects and apply all java-related plugins on them only.
    leafProjects = subprojects.findAll { subproject ->
        subproject.subprojects.empty
    }
}

apply from: 'promotion.gradle'

configure(leafProjects) {
    apply from: "$rootDir/gradle/Deltix.gradle"
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: "com.github.spotbugs" // Static analysis
    apply plugin: 'io.spring.dependency-management'

    // --- JAVA 11 version ---
    //--add-exports <module>/<module>/<package>=<target-module>(,<target-module>)*

    compileJava {
        options.warnings = true
        options.deprecation = false
        options.encoding = 'UTF-8'
        options.compilerArgs += ["--add-exports=java.base/sun.nio.ch=ALL-UNNAMED", "--add-exports=java.base/sun.nio=ALL-UNNAMED"]
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    // Defines versions of dependencies to be used by subprojects
    dependencyManagement {
        dependencies {
            dependency 'deltix:deltix-thread-affinity:1.0.2'
            dependency 'org.apache.commons:commons-lang3:3.4'
            dependency 'javax.mail:mail:1.4.7'
            dependency 'com.google.code.findbugs:jsr305:3.0.2'
            dependency 'com.google.code.findbugs:annotations:3.0.1'

            dependency "com.epam.deltix:dfp:$dfpVersion"
            dependency "deltix:hd-date-time:$hdTimeVersion"

            dependencySet (group: 'deltix', version: '2.0.22') {
                entry 'deltix-gflog-api'
                entry 'deltix-gflog-core'
                entry 'deltix-gflog-jul'
                entry 'deltix-gflog-dcl'
                entry 'deltix-gflog-slf4j'
            }

            dependencySet(group: 'com.jidesoft', version: '3.7.8') {
                entry 'deltix-jide-components'
                entry 'deltix-jide-dialogs'
                entry 'deltix-jide-action'
                entry 'deltix-jide-dock'
                entry 'deltix-jide-grids'
            }

            // JMH
            dependencySet(group: 'org.openjdk.jmh', version: '1.19') {
                entry 'jmh-core'
                entry 'jmh-generator-annprocess'
            }
        }
    }

    group 'deltix.qsrv'
    archivesBaseName = 'deltix-commons' + project.path.replaceAll(':', '-')

    repositories {
        mavenDeltixProxy("DevMain")
    }

    dependencies {
        compileOnly 'com.google.code.findbugs:jsr305'
        compileOnly 'com.google.code.findbugs:annotations'

        testImplementation 'junit:junit:4.12'

        spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.9.0'
    }

    spotbugs {
        toolVersion = "3.1.12"
        effort = "max"
        reportLevel = "medium"
        sourceSets = [sourceSets.main] // exclude tests
        excludeFilter = rootProject.file('spotbugs-excludes.xml')
    }

    tasks.withType(com.github.spotbugs.SpotBugsTask) {
        enabled = enableSpotbugs

        reports {
            xml.enabled = false
            html.enabled = true
        }
    }

    jar {
        manifest {
            baseName archivesBaseName
            attributes 'Manifest-Version': "1.0",
                    'Created-By': vendor,
                    'Implementation-Title': "QuantServer Commons",
                    'Implementation-Vendor': vendor,
                    'Implementation-Version': project.version
        }
    }

    processResources {
        from sourceSets.main.java.srcDirs
        exclude '**/*.java'
        includeEmptyDirs = false
    }

    processTestResources {
        from sourceSets.test.java.srcDirs
        exclude '**/*.java'
        includeEmptyDirs = false
    }

    afterEvaluate {
        // populate project classpath after evaluating
        jar.manifest.attributes 'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
    }

    // Contains current project jar and all required dependencies for that project
    def allJarsPath = 'build/alljars'

    task gatherProjectDependencies(type: Sync) {
        description 'Copies all project runtime dependencies to ' + allJarsPath
        from project.configurations.runtimeClasspath
        into allJarsPath
    }

    task gatherAllJarsWithDependencies(type: Copy, dependsOn: ['jar', gatherProjectDependencies]) {
        group "build"
        description 'Copies all project JAR and all it\'s runtime dependencies to ' + allJarsPath
        from jar // Main produced JAR of the subproject
        into allJarsPath
    }

    def allTestJarsPath = 'build/alltestjars'

    task gatherProjectTestDependencies(type: Sync) {
        description 'Copies all project test dependencies to ' + allTestJarsPath
        from project.configurations.testRuntimeClasspath
        into allTestJarsPath
    }

    task generateTestJar(type: Jar) {
        description 'Generates JAR with test classes'
        classifier 'tests'
        from sourceSets.test.output
    }

    task gatherAllTestJarsWithDependencies(type: Copy, dependsOn: ['jar', generateTestJar, gatherProjectTestDependencies]) {
        group "build"
        description 'Copies all project JAR and all it\'s test dependencies to ' + allTestJarsPath
        from jar // Main produced JAR of the subproject
        from generateTestJar // JAR with test classes

        into allTestJarsPath
    }

    /// Support for publishing -sources.jar and -javadoc.jar artifacts:

    task sourcesJar(type: Jar, dependsOn: classes) {
        classifier = 'sources'
        baseName = archivesBaseName
        from sourceSets.main.allSource
    }

    task javadocJar(type: Jar, dependsOn: javadoc) {
        enabled = includeJavaDocs
        classifier = 'javadoc'
        baseName = archivesBaseName
        from javadoc.destinationDir
    }

    tasks.withType(Javadoc) {
        // "Xdoclint:all,-reference" - disables fail on missing JavaDoc reference. TODO: Consider removing this.
        // "-quiet" - skips warning messages (warnings still shown).
        options.addStringOption('Xdoclint:all,-reference', '-quiet')
    }

    artifacts {
        archives sourcesJar
        if (includeJavaDocs) {
            archives javadocJar
        }
    }

    // Publishing
    publishing {
        repositories {
            maven {
                url javaPublicationUrl
                credentials {
                    username publisherUser
                    password publisherPassword
                }
            }
        }

        publications {
            mavenJava(MavenPublication) {
                from components.java
                if (includeJavaDocs) {
                    artifact javadocJar
                }
                artifact sourcesJar
                artifactId = archivesBaseName
            }
        }
    }

    if (!includeJavaDocs) {
        tasks.withType(Javadoc).all { enabled = false }
    }

    //tasks.test { enabled = false }
    test {
        useJUnit {
            setIncludeCategories categories.split(',').collect { "deltix.util.CommonsJUnitCategories\$${it}".toString() } as Set
        }
    }

}

allprojects {
    // See http://jeremylong.github.io/DependencyCheck/dependency-check-gradle
    apply plugin: 'org.owasp.dependencycheck'

    dependencyCheck {
        // skipProjects = nonJavaProjects
        failBuildOnCVSS = 7
        suppressionFile = file("$rootDir/dependency-check-suppression-file.xml")
        analyzers {
            assemblyEnabled = false
        }
    }
}

def testTasks = ext.leafProjects*.test

task generateTestReport(type: TestReport) {
    group 'verification'
    reportOn testTasks
    destinationDir = file("$rootDir/build/reports/junit/html/all_reports_merged") // TODO: Pick better name for merged report
}


gitlabRelease {
    distributionUrl = project.publishRepositoryUrl
    assets.add(project.publishRepositoryUrl) // TODO: nexus pass

    msteams {
        projectName = "QuantServer Commons"
        color = "1B567B"
    }
}

